Fixed accessibility for classes in Info folder

--- a/MainPart/MainPart.csproj
+++ b/MainPart/MainPart.csproj
@@ -9,4 +9,8 @@
     <Folder Include="GeneratedFies\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TestGeneratorLib\TestGeneratorLib.csproj" />
+  </ItemGroup>
+
 </Project>
